--- a/main.css
+++ b/main.css
@@ -222,7 +222,7 @@ a span:hover {
     flex-wrap: wrap;
 }
 .project-div {
-    height: 45vh;
+    min-height: 45vh;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -245,17 +245,17 @@ a span:hover {
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
-   
+   width: 50%;
     margin: 1rem;
     color: var(--contrast-color);
 }
 .project-image {
-    width: 30%;
-    height: 90%;
+    width: 50%;
+    min-height: 40vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     transition: transform 0.3s ease, filter 0.3s ease;
     position: relative;
