--- a/main.css
+++ b/main.css
@@ -250,7 +250,7 @@ a span:hover {
     color: var(--contrast-color);
 }
 .project-image {
-    width: 50%;
+    width: 40%;
     min-height: 40vh;
     display: flex;
     align-items: center;
@@ -371,7 +371,10 @@ a span:hover {
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 90%;
+      
+        min-height: 20vh;
+        background-position: center;
+        background-size: contain;
     }
    
     
