--- a/about.css
+++ b/about.css
@@ -1,10 +1,8 @@
-#about-me {
-    padding: 4rem 2rem;
-    color: var(--contrast-color);
-  }
+
   
   .about-content {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     gap: 2rem;
   }
@@ -20,8 +18,19 @@
   .personal h3, .professional h3 {
     color: var(--accent-color);
   }
-  @media screen and (max-width:800px) {
-    .about-content {
-        flex-direction: column;
-      }
-  }
+
+
+.skill-icons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.skill-icons i {
+  font-size: 3rem;
+  color: var(--highlight-color);
+ 
+}
+
