--- a/main.css
+++ b/main.css
@@ -255,6 +255,8 @@ a span:hover {
     background-repeat: no-repeat;
     transition: transform 0.3s ease, filter 0.3s ease;
     position: relative;
+    border-radius: 8px;
+    box-shadow: inset 0.5px -0.5px 7px 1.5px var(--highlight-color);
   
   }
   
