--- a/style.css
+++ b/style.css
@@ -95,32 +95,16 @@ button:hover {
 
 .particle {
   position: absolute;
-  width: 5px;
-  height: 5px;
+  width: 50px;
+  height: 50px;
   background-color: var(--highlight-color);
   border-radius: 50%;
   pointer-events: none;
+  filter: blur(20px);
   transition: opacity 1s, transform 1s;
 }
 
 
-.skill-icons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.skill-icons i {
-  font-size: 3rem;
-  color: var(--highlight-color);
-  transition: transform 0.3s ease;
-}
-
-.skill-icons i:hover {
-  transform: scale(1.2);
-}
 .console-text,.project-details p,.project-details h2{
   font-family: 'Courier New', monospace;
 
