--- a/about.css
+++ b/about.css
@@ -6,6 +6,12 @@
     justify-content: space-between;
     gap: 2rem;
   }
+  .personal{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
   
   .personal, .professional {
     flex: 1;
@@ -34,3 +40,8 @@
  
 }
 
+@media screen and (max-width:800px) {
+  .personal{
+    width: 100%;
+  }
+}
